client/styles.css
label {
	margin-left: 15px;
	font-size: 14px;
}

#salary {
	width: 200px;
	margin-left: 15px;
}

.table {
	/*width: 900px;*/
	margin-top: 50px;
	position: relative;
	display: inline;
}

#newPlayerForm {
	border: 3px solid;
	border-radius: 5px;
	padding: 15px;
	width: 300px;
}

#todaysPlayers {
	background-color: white;
	display: inline-block;
	border: 3px solid;
	border-radius: 5px;
	padding: 15px;
	position: fixed;
	top: 30px;
	right: 30px;
}

#min {
	float: right;
}

#salaryMin {
	display: flex;
}

#salaryMinInput {
	width: 200px;
}

#salaryRow {
	margin: 0;
	width: 200px;
}

#playerDiv {
	width: 200px;
}

#salaryForm {
	margin: 0;
}

.table>tbody>tr>td {
	padding-top: 20px;
}

